# anvil

./: Cargo.toml  README.md  VERSIONING.md
axum-smoke-test/: Cargo.toml
axum-smoke-test/src/: main.rs
crates/adapter-axum/: Cargo.toml
crates/adapter-axum/src/: lib.rs
crates/anvil-adapter-axum/: Cargo.toml  README.md
crates/anvil-adapter-axum/src/: lib.rs
crates/anvil-core/: Cargo.toml  README.md
crates/anvil-core/src/config/: error.rs  loader.rs  mod.rs
crates/anvil-core/src/observability/: mod.rs  tracing.rs
crates/anvil-core/src/shutdown/: mod.rs
crates/backend-adapter-axum/: Cargo.toml
crates/backend-adapter-axum/src/: lib.rs
crates/backend-core/: Cargo.toml
crates/backend-core/src/: lib.rs
crates/backend-core/src/health/: mod.rs  state.rs
crates/backend-core/src/lifecycle/: mod.rs  state.rs
crates/backend-core/src/shutdown/: coordinator.rs  signal.rs
crates/backend-core/src/startup/: orchestrator.rs
