[package]
name = "axum-smoke-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7"

anvil-core = { path = "../crates/anvil-core", features = ["tokio"] }
anvil-adapter-axum = { path = "../crates/anvil-adapter-axum" }

tracing = "0.1"
tracing-subscriber = "0.3"