[package]
name = "backend-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.tokio]
version = "1.48.0"
optional = true
features = ["signal", "sync", "macros"]

[features]
default = []
tokio = ["dep:tokio"]